# crooked_development

python-packages/adb/adb/: __init__.py
scripts/: cargo2rulesmk.py  stack_core.py  symbol.py
tools/cargo_embargo/: Cargo.toml  recontextualize.sh
tools/cargo_embargo/src/: config.rs  main.rs
tools/cargo_embargo/src/cargo/: cargo_out.rs  metadata.rs
tools/external_crates/: Cargo.toml  cargo_embargo.json  cargo_embargo_all.sh
tools/external_crates/crate_health/: Cargo.toml  build.rs
tools/external_crates/crate_health/src/: android_bp.rs  crate_collection.rs  crate_type.rs  crates_io.rs  google_metadata.rs  lib.rs  license.rs  main.rs  managed_crate.rs  managed_repo.rs  migration.rs  name_and_version_map.rs  patch.rs  pseudo_crate.rs  version_match.rs
tools/external_crates/crate_tool/src/: managed_crate.rs  managed_repo.rs  pseudo_crate.rs
tools/external_crates/google_metadata/: Android.bp  cargo_embargo.json  cargo_embargo_protobuf.bp
tools/external_crates/google_metadata/src/: lib.rs
tools/external_crates/license_checker/: Cargo.toml
tools/external_crates/license_checker/src/: content_checker.rs  expression_parser.rs  lib.rs  license_file_finder.rs
tools/external_crates/name_and_version/src/: lib.rs  name_and_version.rs  name_and_version_map.rs
tools/external_crates/rooted_path/: Android.bp  cargo_embargo.json
tools/external_crates/test_mapping/: Cargo.toml
tools/external_crates/test_mapping/src/: blueprint.rs  json.rs  lib.rs  rdeps.rs
tools/mergetool/: remerge3.sh  split3.awk
treble/: compare_bp_system_image.sh
(+37 files in other folders)
