[package]
name = "cargo_embargo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.11"
glob = "0.3"
log = "0.4"
nix = { version = "0.28.0", features = ["fs"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
