[package]
name = "test_mapping"
version = "0.1.0"
edition = "2021"

[dependencies]
# DO NOT SUBMIT. Use thiserror
anyhow = "1"
android_bp = "0.3"
json-strip-comments = "1"
owning_ref = "0.4"
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "1"
rooted_path = { path = "../rooted_path" }
